<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_sutet"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="310dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginRight="2dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="5dp">

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/tombol_logout"
                    android:layout_weight="0.5"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/tombol_upload_master_file"
                    android:layout_weight="1.5"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/phrobing_pelanggan"
                android:textColor="@color/green1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tombol_phrobing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/tombol_input_probing"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/tombol_status_phrobing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/tombol_status_probing"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tombol_riwayat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/tombol_riwayat_probing"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/tombol_harian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/tombol_probing_harian"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_marginLeft="15dp"
                android:textColor="@color/green1"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promo_layanan_premium"/>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/layanan_premium_slider"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="left"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="0dp"
                    app:sliderIndicatorRtlMode="auto"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/green1"
                android:textStyle="bold"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layanan_premium_new"/>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="1.0">
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/layanan_premium_new"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="left"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="0dp"
                    app:sliderIndicatorRtlMode="auto"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/green1"
                android:textStyle="bold"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarif_tegangan_menengah_dan_tegangan_tinggi" />

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/tarif_tegangan"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="left"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="0dp"
                    app:sliderIndicatorRtlMode="auto"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>